--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="table">
 
     </div>
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
+    <script src="./script2.js"></script>
 
 </body>
 </html>
